<resources>
    <string name="bp_test">Blood pressure test</string>
    <string name="detail_data">detailed data</string>
    <string name="today_medical_report">Der heutige medizinische Bericht</string>
    <string name="today_spo2_report">Die heutige Schlafoximetrie</string>
    <string name="today_sport_report">Gesamtübung heute</string>
    <string name="today_sleep_quality">Schlafqualität heute</string>
    <string name="today_heart_count">Herzfrequenzstatistik heute</string>
    <string name="today_spo2_break_rate_check">Blutsauerstoff/Apnoe-Check</string>
    <string name="today_toptitle_heart">Herzbelastungsuntersuchung</string>
    <string name="today_sleep_inciti">Schlafberuhigende körperliche Untersuchung</string>
    <string name="today_toptitle_check">Atemfrequenzuntersuchung</string>
    <string name="today_low_o2_time">Hypoxiezeit körperliche Untersuchung</string>
    <string name="string_msg_basic_requ">Basic requirements for notifications</string>
    <string name="string_basic_cont1">1.Make sure Check one is running and connected to the device</string>
    <string name="string_basic_cont2">2.Make sure Check one has set up power consumption protection</string>
    <string name="string_basic_cont3">3.Make sure Check one has set up autorun permission</string>
    <string name="string_basic_cont4">4.Confirm that Check one has set up system or mobile housekeeper whitelist protection</string>
    <string name="string_apps_alert_title">Q:Why applications such as FaceBook、QQ、Wechat have no notifications?</string>
    <string name="string_apps_cont1">1.Make sure FaceBook、QQ、Wechat and other applications allow displaying message on notification bar</string>
    <string name="string_apps_cont2">2.Disable the Check one notification permission and enable it again</string>
    <string name="string_to_restart">To restart</string>
    <string name="string_call_phone_alert">Q:Why there is no incoming call alert?</string>
    <string name="string_call_phone_cont1">1.Make sure you have enable the contacts permission</string>
    <string name="string_call_phone_cont2">2.Make sure you have enabled phone call permission</string>
    <string name="string_call_phone_cont3">3.Confirm that the call record permission is turned on.</string>
    <string name="string_smg_alert_title">Q:Why there is no SMS notification?</string>
    <string name="string_smg_alert_content1">2.Make sure you have enabled SMS permission</string>
    <string name="string_enable">Enable</string>
    <string name="string_disable">Disable</string>
    <string name="string_systolic">systolic pressure</string>
    <string name="string_diastolic">diastolic pressure</string>
    <string name="string_bloop_di">Hypotension</string>
    <string name="string_bloop_lixiang">Ideal</string>
    <string name="string_bloop_zhengchang">Normal</string>
    <string name="string_bloop_qingdugao">Mild</string>
    <string name="string_bloop_zhongdugao">Moderate</string>
    <string name="string_bloop_zzhongdugao">Severe</string>
    <string name="string_cankao_res">Reference result</string>
    <string name="fatigue_normal">In good condition</string>
    <string name="fatigue_mild">Mild fatigue</string>
    <string name="fatigue_moderate">Moderate fatigue</string>
    <string name="fatigue_severe">Severe fatigue</string>
    <string name="fatigue_noral_suggest">Your energy is full, you don\'t feel tired, your concentration is high, and your work efficiency is very high.</string>
    <string name="fatigue_mild_suggest">You are slightly tired and uncomfortable. You can usually listen to some of your favorite music to ease it.</string>
    <string name="fatigue_moderate_suggest">You may have feelings of drowsiness, fatigue, dizziness, body stiffness, etc. You can look at the distant scenery or take a nap, relieve fatigue and prepare for efficient work.</string>
    <string name="fatigue_sebere_suggest">You may not be able to concentrate, especially sleepy. Usually pay more attention to rest, drink plenty of water, keep your mind relaxed, your body and mind are relaxed, and your work efficiency will be high.</string>
    <string name="count_down">Countdown</string>
    <string name="show_on_screen">Interface display</string>
    <string name="common_time">Common time</string>
    <string name="count_douwn_desc">Remarks \n 1, the interface display is enabled, and the device can use the timing function separately. \n 2, when the device is used alone, the timing is the usual duration.
         \n 3, when the device uses the timing function alone, press and hold for 3 seconds on the timing interface. \n 4, after the countdown starts, press and hold the timer for 3 seconds to end the timing.</string>
    <string name="vpspo2h_sleep_sportvalue">Range of sleeping activity</string>
    <string name="vpspo2h_breath_break">Obstructive sleep apnea syndrome</string>
    <string name="vpspo2h_ratevaraive">脉率变异性</string>
    <string name="vpspo2h_spo2h">Blood oxygen</string>
    <string name="vpspo2h_low_remain">Hypoxia and arousal</string>
    <string name="ave_value">average value</string>
    <string name="heart_health_sorce">Heart health index</string>
    <string name="analysis_result">Analytic result(For reference only)</string>
    <string name="spo2_breath_break">Blood oxygen/Apnea</string>
    <string name="spo2_main_sorce">Key indicators</string>
    <string name="more">More</string>
    <string name="pack_up">Pack Up</string>
    <string name="name">Name</string>
    <string name="frequent_time">Frequently appearing time</string>
    <string name="times">Frequency</string>
    <string name="reference">Reference value</string>
    <string name="max_min">Max(Min)</string>
    <string name="intervention_measures">Intervention measures</string>
    <string name="vpspo2h_state_realtime">Real-time blood oxygen</string>
    <string name="vpspo2h_state_breathbreak">Apnea</string>
    <string name="vpspo2h_state_calm">Mild</string>
    <string name="vpspo2h_state_error">Abnormal</string>
    <string name="vpspo2h_state_little">Silent</string>
    <string name="vpspo2h_state_mulmulsport">Dysphoria</string>
    <string name="vpspo2h_state_mulsport">Hyperaction</string>
    <string name="vpspo2h_state_normal">Normal</string>
    <string name="vpspo2h_toptitle_breath">Respiratory</string>
    <string name="vpspo2h_toptitle_heart">Cardiac load</string>
    <string name="vpspo2h_toptitle_lowspo2h">Hypoxia time</string>
    <string name="vpspo2h_toptitle_sleep">Sleeping activity</string>
    <string name="lero_referenc">Reference of Lorentz scatter diagram</string>
    <string name="hrv_data">HRV data</string>
    <string name="spo2_test">SpO2 test</string>
    <string name="spo2_calibration_pro">Calibration progress</string>
    <string name="fatigue_test">Fatigue test</string>
    <string name="fatigue_no_test_desc">Appropriate attention their physical condition oh!</string>
    <string name="test_invalid">Invalid test</string>
    <string name="mild_fait">Mild fatigue</string>
    <string name="general_fait">General fatigue</string>
    <string name="weight_fait">Severe fatigue</string>
    <string name="severe">Severe</string>
    <string name="moderate">Moderate</string>
    <string name="common_sense_of_apnea">Common sense of apnea</string>
    <string name="max_value">Maximum</string>
    <string name="min_value">Minimum</string>
    <string name="signle_minute">min</string>
    <string name="second">second</string>
    <string name="time_area">Time</string>
    <string name="accumulate">Accumulated value</string>
    <string name="string_delete_alarm">Determine to delete the alarm clock？</string>
    <string name="string_language_setting">Language settings</string>
    <string name="string_vibration_level">Vibration intensity</string>
    <string name="string_correction_time">Quick calibration</string>
    <string name="string_alarm_eat">Dinner</string>
    <string name="string_alarm_medic">Medicine</string>
    <string name="string_alarm_drink">water</string>
    <string name="string_alarm_sleep">Sleep</string>
    <string name="string_alarm_metting">Meeting</string>
    <string name="string_alarm_week">Cycle</string>
    <string name="string_alarm_ch">CN</string>
    <string name="string_alarm_en">EN</string>
    <string name="string_alarm_resume_factory">Restore the factory will delete all movement data, determine the operation?</string>
    <string name="string_alarm_time_difference">Errors with a time difference greater than one day, to correct?</string>
    <string name="string_alarm_time_difference_h">Errors with a time difference greater than one hour, to correct?</string>
    <string name="string_alarm_time_difference_m">Errors with a time difference greater than 10 minutes, to correct?</string>
    <string name="string_no_frend">Non friend state</string>
    <string name="b36_update_women_status">Whether the status is set to </string>
    <string name="b36_period">period</string>
    <string name="b36_pregnancy_probability">Pregnancy probability</string>
    <string name="b36_baby_born_days">Days until child birth</string>
    <string name="b36_predict_period">Predict menstrual period</string>
    <string name="ssdk_oks_sharing">ssdk_oks_sharing</string>
    <string name="b36_ovulation_day">Ovulation Day</string>
    <string name="b36_ovulation_period">Ovulation period</string>
    <string name="b36_period_day">Predict menstrual period</string>
    <string name="b36_safety_day">Safety</string>
    <string name="b36_future">The future is not operational</string>
    <string name="b36_back_today">Back to today</string>
    <string name="b36_baby_info_data">Fill in the basic information of the child</string>
    <string name="b36_smart_baby_born">We can calculate the expected date of birth according to your last menstrual period.</string>
    <string name="b36_expected_date">Fill expected date of childbirth</string>
    <string name="b36_last_period_date">When the last menstruation</string>
    <string name="b36_period_interval_avg">How long the intervel between manstruation?</string>
    <string name="b36_period_length_avg">How long does you menstruation last?</string>
    <string name="b36_choose_status">Choose your status</string>
    <string name="b36_last_period">Date of last period</string>
    <string name="b36_period_start">Period start</string>
    <string name="b36_period_end">Period end</string>
    <string name="string_fuse">Skin color selection</string>
    <string name="private_blood_val">Current private blood pressure:</string>
    <string name="bloodpressure_msg1">Please select personal blood pressure mode data. Personal blood pressure mode is only effective for individuals. Others please select general mode</string>
    <string name="string_reset_device_password">Reset device password</string>
    <string name="string_init_device_password">Initial password 0000</string>
    <string name="string_writ_old_password">Enter old password</string>
    <string name="string_add_new_reminder">Add a new reminder</string>
    <string name="str_one">You can set up various types of reminders every day</string>
    <string name="str_two">Select alert type</string>
    <string name="str_three">Long press to delete alarm clock</string>
    <string name="str_four">Select reminder time and date</string>
    <string name="str_five">Once at the point of warning, the device will vibrate gently and display the appropriate icon to alert you</string>
    <string name="save">save</string>
    <string name="cancle">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="input_new_password">Enter new password</string>
    <string name="input_confirm_password">Confirmation new password</string>
    <string name="bloodpressure_msg">Set your private blood pressure mode to get more accurate data, where you need to set the effective blood pressure values that are not taking antihypertensive medications</string>
</resources>