<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/comment_b30_title_layout"/>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:padding="8dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="match_parent"
                android:text="@string/string_msg_basic_requ"
                android:textSize="20sp"
                android:padding="5dp"
                android:textColor="@color/title_background"
                android:layout_height="wrap_content" />


            <TextView
                android:layout_width="match_parent"
                android:textSize="17sp"
                android:padding="3dp"
                android:text="@string/string_basic_cont1"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:textSize="17sp"
                android:padding="3dp"
                android:text="@string/string_basic_cont2"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:textSize="17sp"
                android:padding="3dp"
                android:text="@string/string_basic_cont3"
                android:layout_height="wrap_content" />


            <TextView
                android:layout_width="match_parent"
                android:textSize="17sp"
                android:padding="3dp"
                android:text="@string/string_basic_cont4"
                android:layout_height="wrap_content" />




            <TextView
                android:layout_width="match_parent"
                android:text="@string/string_apps_alert_title"
                android:textSize="20sp"
                android:padding="5dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/title_background"
                android:layout_height="wrap_content" />



            <TextView
                android:layout_width="match_parent"
                android:textSize="17sp"
                android:padding="3dp"
                android:text="@string/string_apps_cont1"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:textSize="17sp"
                android:padding="3dp"
                android:text="@string/string_basic_cont3"
                android:layout_height="wrap_content" />



            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">


                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="17sp"
                    android:padding="3dp"
                    android:layout_gravity="center"
                    android:text="@string/string_apps_cont2"
                    android:layout_height="wrap_content" />


                <TextView
                    android:id="@+id/helpNotificationTv"
                    android:layout_width="wrap_content"
                    android:text="@string/string_to_restart"
                    android:layout_gravity="center"
                    android:padding="3dp"
                    android:textColor="@color/blue"
                    android:layout_height="wrap_content" />

            </LinearLayout>



            <TextView
                android:layout_width="match_parent"
                android:text="@string/string_call_phone_alert"
                android:textSize="20sp"
                android:padding="5dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/title_background"
                android:layout_height="wrap_content" />


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="17sp"
                    android:padding="3dp"
                    android:layout_gravity="center"
                    android:text="@string/string_call_phone_cont1"
                    android:layout_height="wrap_content" />


                <TextView
                    android:id="@+id/helpContPermissionTv"
                    android:layout_width="wrap_content"
                    android:text="@string/string_enable"
                    android:layout_gravity="center"
                    android:padding="3dp"
                    android:textColor="@color/blue"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="17sp"
                    android:padding="3dp"
                    android:layout_gravity="center"
                    android:text="@string/string_call_phone_cont2"
                    android:layout_height="wrap_content" />


                <TextView
                    android:id="@+id/helpPhonePermissionTv"
                    android:layout_width="wrap_content"
                    android:text="@string/string_enable"
                    android:layout_gravity="center"
                    android:padding="3dp"
                    android:textColor="@color/blue"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="17sp"
                    android:padding="3dp"
                    android:layout_gravity="center"
                    android:text="@string/string_call_phone_cont3"
                    android:layout_height="wrap_content" />


                <TextView
                    android:id="@+id/helpCallLogPermissionTv"
                    android:layout_width="wrap_content"
                    android:text="@string/string_enable"
                    android:layout_gravity="center"
                    android:padding="3dp"
                    android:textColor="@color/blue"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:text="@string/string_smg_alert_title"
                android:textSize="20sp"
                android:padding="5dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/title_background"
                android:layout_height="wrap_content" />


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="17sp"
                    android:padding="3dp"
                    android:layout_gravity="center"
                    android:text="@string/string_call_phone_cont1"
                    android:layout_height="wrap_content" />


                <TextView
                    android:id="@+id/helpContPermission2Tv"
                    android:layout_width="wrap_content"
                    android:text="@string/string_enable"
                    android:layout_gravity="center"
                    android:padding="3dp"
                    android:textColor="@color/blue"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="17sp"
                    android:padding="3dp"
                    android:layout_gravity="center"
                    android:text="@string/string_smg_alert_content1"
                    android:layout_height="wrap_content" />


                <TextView
                    android:id="@+id/helpSMSPermissionTv"
                    android:layout_width="wrap_content"
                    android:text="@string/string_enable"
                    android:layout_gravity="center"
                    android:padding="3dp"
                    android:textColor="@color/blue"
                    android:layout_height="wrap_content" />

            </LinearLayout>



            <View
                android:layout_width="match_parent"
                android:layout_height="25dp"/>


        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

</LinearLayout>