<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <include layout="@layout/comment_b30_title_layout"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:layout_height="wrap_content">



        <TextView
            android:layout_width="match_parent"
            android:text="@string/string_init_device_password"
            android:gravity="center"
            android:textColor="#1C1C1C"
            android:textSize="20sp"
            android:layout_height="wrap_content" />



        <EditText
            android:maxLength="4"
            android:id="@+id/b30OldPwdEdit"
            android:layout_width="match_parent"
            android:hint="@string/string_writ_old_password"
            android:background="@null"
            android:inputType="number"
            android:padding="3dp"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="3dp"
            android:background="#EBEBEB"/>


        <EditText
            android:maxLength="4"
            android:id="@+id/b30NewPwdEdit"
            android:layout_width="match_parent"
            android:hint="@string/input_new_password"
            android:background="@null"
            android:inputType="number"
            android:maxLines="1"
            android:padding="3dp"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="3dp"
            android:background="#EBEBEB"/>


        <EditText
            android:maxLength="4"
            android:id="@+id/b30AgainNewPwdEdit"
            android:layout_width="match_parent"
            android:inputType="number"
            android:hint="@string/input_confirm_password"
            android:background="@null"
            android:padding="3dp"
            android:maxLines="1"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="3dp"
            android:background="#EBEBEB"/>
    </LinearLayout>


    <Button
        android:id="@+id/b30ResetPwdBtn"
        style="@style/match_btn"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_login_form"
        android:layout_marginTop="@dimen/size_16"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/blue_btn_selector"
        android:text="@string/string_reset_device_password" />


</LinearLayout>