<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/comment_b30_title_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_no_alarm_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_al"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:drawableLeft="@drawable/b30_alarm_0"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="@string/str_one"
                android:textSize="16sp" />

            <View
                android:id="@+id/text_av"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#44000000" />

            <TextView
                android:id="@+id/text_al2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:drawableLeft="@drawable/b30_alarm_1"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="@string/str_two"
                android:textSize="16sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#44000000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:drawableLeft="@drawable/b30_alarm_2"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="@string/str_four"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#44000000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:drawableLeft="@drawable/b30_alarm_3"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="@string/str_three"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#44000000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:drawableLeft="@drawable/b30_alarm_4"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="@string/str_five"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#44000000" />
        </LinearLayout>

        <ListView
            android:id="@+id/lv_alarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="blocksDescendants" />
    </LinearLayout>

    <Button
        android:visibility="gone"
        android:id="@+id/b30addAlarmBtn"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_margin="20dp"
        android:background="@drawable/blue_btn_selector"
        android:text="@string/string_add_new_reminder"
        android:textColor="@color/white"
        android:textSize="18sp" />
</LinearLayout>