<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="3dp"
        android:text="@string/string_fuse"
        android:textSize="20sp" />


    <ListView
        android:scrollbars="none"
        android:id="@+id/skinColorListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/skinColorCancleBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/h8_data_bg"
                android:text="@string/cancle"
                android:textColor="@color/blue" />


            <Button
                android:id="@+id/skinColorSureBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/h8_data_bg"
                android:text="@string/confirm"
                android:textColor="@color/blue" />

        </LinearLayout>



</LinearLayout>